--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -19,7 +19,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 <a
 	data-umami-event={`${id} Blog Card`}
 	href={`${SITE_BASE}/${locale}/posts/${id}/`}
-	class="flex flex-col gap-4 pb-8 h-full group transition-colors"
+	class="flex flex-col gap-4 p-3 pb-8 h-full group transition-colors rounded-3xl hover:bg-secondary dark:hover:bg-secondary-dark"
 >
 	{
 		blogImages[coverImagePath] && (
@@ -31,12 +31,12 @@ const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 			/>
 		)
 	}
-	<h4
-		class="text-2xl font-semibold group-hover:text-primary dark:group-hover:text-primary-dark group-hover:underline transition-colors"
+	<h3
+		class="text-2xl font-semibold transition-colors"
 		transition:name={`blog-title-${post.data.id}`}
 	>
 		{post.data.title}
-	</h4>
+	</h3>
 	<p
 		class="line-clamp-3 opacity-80"
 		transition:name={`blog-description-${post.data.id}`}
