--- a/src/components/NavbarLink.astro
+++ b/src/components/NavbarLink.astro
@@ -21,9 +21,9 @@ const isActive =
 	@reference "@/styles/global.css";
 
 	a {
-		@apply underline-offset-4 hover:underline relative decoration-2;
+		@apply decoration-wavy underline-offset-4 hover:underline relative decoration-2 decoration-accent dark:decoration-accent-dark;
 	}
 	a.active {
-		@apply underline text-primary dark:text-primary-dark;
+		@apply underline decoration-accent dark:decoration-accent-dark;
 	}
 </style>
