--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -2,85 +2,109 @@
 import { LOCALES, useTranslations, type Lang } from '@/i18n'
 const t = useTranslations(Astro.currentLocale as Lang)
 import Layout from '@/layouts/Base.astro'
+import { SocialLinks } from '@/consts'
+import { Icon } from 'astro-icon/components'
+import { getEntry, render } from 'astro:content'
 
 export const getStaticPaths = () =>
 	Object.keys(LOCALES).map((lang) => ({
 		params: { lang },
 	}))
+
+import profilePicture from '/src/assets/about-me.jpg'
+const currentLang = Astro.currentLocale as Lang
+const aboutContent = await getEntry('about', currentLang)
+const { Content } = await render(aboutContent!)
 ---
 
 <Layout>
-	<main class="app-container pt-36">
-		<h1 class="text-6xl pb-2 font-bold">
-			{t({ es: 'Acerca de Mí', gl: 'Sobre Min', en: 'About Me' })}
-		</h1>
-	</main>
-	<section class="app-container py-12 mb-8">
-		<div
-			class="prose prose-neutral prose-lg md:prose-xl dark:prose-invert prose-img:rounded-xl prose-figure:text-center prose-img:mx-auto"
+	<main>
+		<article
+			class="app-container flex flex-col lg:flex-row-reverse justify-between gap-8 pt-36 py-24 relative"
 		>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Amet purus gravida
-				quis blandit turpis cursus in hac. Nisi est sit amet facilisis magna
-				etiam tempor orci eu. Egestas dui id ornare arcu odio ut sem. Cras
-				semper auctor neque vitae tempus quam pellentesque nec nam. Faucibus a
-				pellentesque sit amet porttitor eget dolor morbi. At tempor commodo
-				ullamcorper a lacus vestibulum sed arcu non. Justo nec ultrices dui
-				sapien eget mi proin sed. Nunc sed velit dignissim sodales ut eu sem
-				integer.
-			</p>
-			<p>
-				Viverra aliquet eget sit amet tellus cras adipiscing enim. Eget aliquip
-				nibh praesent tristique magna sit amet purus gravida. Nisl tincidunt
-				eget nullam non. Amet justo donec enim diam vulputate ut pharetra sit.
-				Eu sem integer vitae justo eget magna fermentum iaculis. Sit amet
-				consectetur adipiscing elit duis tristique. Faucibus a pellentesque sit
-				amet porttitor eget dolor morbi non. Ornare lectus sit amet est placerat
-				in egestas erat. Sagittis eu volutpat odio facilisis mauris sit amet.
-				Commodo quis imperdiet massa tincidunt nunc pulvinar sapien et.
-			</p>
-			<p>
-				Nunc consequat interdum varius sit amet mattis. Semper auctor neque
-				vitae tempus quam pellentesque nec nam. Blandit libero volutpat sed cras
-				ornare arcu dui vivamus arcu. Sed viverra tellus in hac habitasse platea
-				dictumst vestibulum. Nibh praesent tristique magna sit amet purus
-				gravida. Congue nisi vitae suscipit tellus mauris a. Tincidunt augue
-				interdum velit euismod in pellentesque massa placerat duis. Lectus nulla
-				at volutpat diam ut venenatis. Dignissim suspendisse in est ante in.
-				Velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus.
-			</p>
-			<p>
-				Risus commodo viverra maecenas accumsan lacus vel. Vitae purus faucibus
-				ornare suspendisse sed nisi lacus sed. Consequat mauris nunc congue nisi
-				vitae suscipit tellus mauris. Sed id semper risus in hendrerit gravida
-				rutrum. Elementum sagittis vitae et leo duis ut diam quam. Eget nunc
-				scelerisque viverra mauris in aliquam. Adipiscing commodo elit at
-				imperdiet dui accumsan sit amet. Sit amet est placerat in egestas erat
-				imperdiet sed euismod. Bibendum arcu vitae elementum curabitur vitae
-				nunc sed. Tincidunt praesent semper feugiat nibh sed pulvinar proin.
-			</p>
-			<p>
-				Massa placerat duis ultricies lacus sed turpis tincidunt id. Arcu cursus
-				vitae congue mauris rhoncus aenean vel elit. Mattis pellentesque id nibh
-				tortor id aliquet lectus proin nibh. Aliquet sagittis id consectetur
-				purus ut faucibus pulvinar elementum. Vitae aliquet nec ullamcorper sit
-				amet risus nullam. Ultrices in iaculis nunc sed augue lacus viverra
-				vitae congue. Amet consectetur adipiscing elit pellentesque habitant
-				morbi. Ut sem nulla pharetra diam sit amet nisl. Ac turpis egestas
-				integer eget aliquet nibh praesent tristique. Nunc eget lorem dolor sed
-				viverra ipsum nunc aliquet.
-			</p>
-			<p>
-				Quis lectus nulla at volutpat diam ut venenatis tellus in. Tellus
-				pellentesque eu tincidunt tortor aliquam nulla. Nulla facilisi etiam
-				dignissim diam quis enim lobortis scelerisque fermentum. Urna molestie
-				at elementum eu facilisis sed odio morbi quis. In est ante in nibh
-				mauris. Dui id ornare arcu odio ut. Pharetra vel turpis nunc eget lorem
-				dolor sed. Eu scelerisque felis imperdiet proin fermentum leo vel. Orci
-				phasellus egestas tellus rutrum tellus pellentesque eu tincidunt.
-				Feugiat in fermentum posuere urna nec tincidunt praesent semper.
-			</p>
-		</div>
-	</section>
+			<!-- Sidebar Image -->
+			<div class="md:w-1/4 relative">
+				<div class="sticky top-0 hidden md:top-28 lg:block">
+					<img
+						src={profilePicture.src}
+						alt="About Me"
+						class="w-full rounded-lg"
+					/>
+					<p class="mt-2 mb-4 opacity-80 italic text-sm">
+						{
+							t({
+								es: 'Este joven apuesto soy yo',
+								gl: 'Este mozo guapo son eu',
+								en: 'This handsome young man is me',
+							})
+						}
+					</p>
+					{
+						SocialLinks.map((link) => (
+							<a
+								class="text-primary dark:text-primary-dark hover:animate-pulse"
+								href={link.url}
+								aria-label={link.name}
+								data-umami-event="Social About Link"
+								data-umami-event-url={link.url}
+								target="_blank"
+							>
+								<Icon
+									size={35}
+									name={`mdi:${link.icon}`}
+									class="inline-block mr-2 mb-1"
+								/>
+							</a>
+						))
+					}
+				</div>
+			</div>
+			<!-- Main Content -->
+			<div class="grow w-full md:max-w-[75ch]">
+				<h1 class="text-6xl pb-8 font-serif font-bold">
+					{t({ es: 'Acerca de Mí', gl: 'Eu', en: 'About Me' })}
+				</h1>
+				<!-- Top Image (only on smaler and medium screen) -->
+				<div class="lg:hidden mb-8">
+					<img
+						src={profilePicture.src}
+						alt="About Me"
+						class="w-full rounded-lg"
+					/>
+					<p class="mt-2 mb-4 opacity-80 italic text-sm">
+						{
+							t({
+								es: 'Este joven apuesto soy yo',
+								gl: 'Este mozo guapo son eu',
+								en: 'This handsome young man is me',
+							})
+						}
+					</p>
+					{
+						SocialLinks.map((link) => (
+							<a
+								class="text-primary dark:text-primary-dark hover:animate-pulse"
+								href={link.url}
+								aria-label={link.name}
+								data-umami-event="Social About Link"
+								data-umami-event-url={link.url}
+								target="_blank"
+							>
+								<Icon
+									size={35}
+									name={`mdi:${link.icon}`}
+									class="inline-block mr-2 mb-1"
+								/>
+							</a>
+						))
+					}
+				</div>
+				<div
+					class="prose prose-neutral prose-lg md:prose-xl dark:prose-invert prose-img:rounded-xl prose-figure:text-center prose-img:mx-auto"
+				>
+					<Content />
+				</div>
+			</div>
+		</article>
+	</main>
 </Layout>
