--- a/src/pages/[lang]/locale.astro
+++ b/src/pages/[lang]/locale.astro
@@ -12,21 +12,23 @@ export const getStaticPaths = () =>
 
 <Layout>
 	<main class="app-container pt-36">
-		<h1 class="text-6xl pb-2 font-bold">
+		<h1 class="text-6xl pb-2 font-serif font-bold">
 			{t({ es: 'Elige Idioma', gl: 'Escolle Idioma', en: 'Choose Language' })}
 		</h1>
 	</main>
-	<section class="app-container py-12 mb-8">
-		<div class="flex flex-wrap gap-4">
+	<section class="app-container py-24">
+		<div class="flex flex-col md:flex-row justify-center gap-12 md:gap-30">
 			{
 				Object.entries(LOCALES).map(([lang, config]) => (
-					<a
-						class="btn-primary"
-						href={`${SITE_BASE}/${lang}/`}
-						data-umami-event={`${config.label} Locale Change`}
-					>
-						{config.emogi} {config.label}
-					</a>
+					<div>
+						<a
+							class="text-4xl item-center hover:text-primary dark:text-primary-dark"
+							href={`${SITE_BASE}/${lang}/`}
+							data-umami-event={`${config.label} Locale Change`}
+						>
+							{config.emogi} {config.label}
+						</a>
+					</div>
 				))
 			}
 		</div>
