--- a/src/pages/[lang]/posts/index.astro
+++ b/src/pages/[lang]/posts/index.astro
@@ -14,11 +14,20 @@ const locale = Astro.currentLocale as Lang
 const posts = (await getCollection('blog'))
 	.filter((post) => post.id.split('/')[0] === locale)
 	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+/* tags filter - to be implemented
+const tags = [
+	...new Set(
+		posts
+			.filter((post) => post.id.split('/')[0] === locale)
+			.flatMap((post) => post.data.tags || [])
+	),
+]
+*/
 ---
 
 <Layout>
 	<main class="app-container pt-36">
-		<h1 class="text-6xl pb-8 font-bold">
+		<h1 class="text-6xl pb-8 font-serif font-bold">
 			{t({ es: 'Artículos', gl: 'Artigos', en: 'Posts' })}
 		</h1>
 		<p class="md:w-2/3 text-lg leading-[2rem]">
@@ -32,6 +41,31 @@ const posts = (await getCollection('blog'))
 		</p>
 	</main>
 	<section class="app-container py-12">
+		<h2 class="text-3xl flex flex-row">
+			<div class="flex flex-wrap gap-4">
+				<a class="font-bold" href={`/${locale}/posts`}>
+					{t({ es: 'Todos', gl: 'Todos', en: 'All' })}
+				</a>
+				<!-- tags filter - to be implemented
+				{
+					tags.map((tag) => (
+						<a class="hover:underline" href={`/${locale}/tags/${tag}`}>
+							{tag}
+						</a>
+					))
+				}
+				-->
+			</div>
+			<div class="flex-grow"></div>
+			<div>
+				{posts.length}
+				{
+					posts.length !== 1
+						? t({ es: 'artículos', gl: 'artigos', en: 'posts' })
+						: t({ es: 'artículo', gl: 'artigo', en: 'post' })
+				}
+			</div>
+		</h2>
 		<ul class="posts-grid-container">
 			{
 				posts.map((post) => (
